overflow issues fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -172,6 +172,7 @@ h1 {
     #services{
       background-color: #000000;
       position: relative;
+      overflow: hidden;
     }
     .bg-splash{
         position: absolute;
@@ -290,6 +291,7 @@ h1 {
       background-color: #000000;
       position: relative;
       z-index: 1000;
+      overflow: hidden;
     }
 
     .bg-splash-portfolio{
@@ -303,6 +305,7 @@ h1 {
       object-fit: cover;
       transform: rotate(45deg);
       z-index: -999;
+      
     }
     .bg-splash-portfolio-two{
       position: absolute;
@@ -351,13 +354,12 @@ h1 {
 
 #tech-stack{
   overflow: hidden;
-  z-index: 99999999;
 }
 
 .scroll-container {
   height: 100px;
   position: relative;
-  z-index: 999999;
+
  
  
 }
